--- a/docs/main.css
+++ b/docs/main.css
@@ -25,6 +25,7 @@ a:visited
 div#aside-wrapper
 {
     position: fixed;
+    z-index: 1;
 
     top: 0;
     left: 0;
@@ -91,6 +92,9 @@ div#aside-wrapper::after
 /* Contents wrapper */
 div#article-wrapper
 {
+    position: relative;
+    z-index: 0;
+
     margin: 0 0 0 15%;
     width: 70%;
 
@@ -113,15 +117,106 @@ div#article-wrapper
     font-family: 'Bree Serif', 'Nanum Gothic Coding', serif;
 }
 
-/* Contents */
+/* Alert */
+#article-wrapper .alert
+{
+    position: relative;
+
+    /* margin: 2em 0 2em 0; */
+    /* padding: 0.5em 3em 0.5em 3em; */
+
+    height: 100px;
+
+    color: #121213;
+    background-color: #ffdd00;
+    box-shadow: 0 0 16px #ffdd00;
+}
+
+#article-wrapper .alert #left
+{   
+    content: "";
+    position: absolute;
+    display: block;
+
+    top: 0;
+    left: 0;
+    width: 80px;
+    height: 100px;
+}
+
+#article-wrapper .alert #left #image
+{   
+    content: url(assets/ICON_NJOH.png);
+    position: relative;
+    display: block;
+
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+    image-rendering: crisp-edges;
+
+    width: 50px;
+    height: 50px;
+}
+
+#article-wrapper .alert #right
+{
+    position: relative;
+    display: block;
+
+    margin: auto 0 auto 80px;
+    width: 80%;
+    height: 80%;
+}
+
+/* Table of Contents */
 #article-wrapper #toc-wrapper
 {
-    display: block;
+    /* display: block; */
+    display: none;
     width: 100%;
 
     background-color: #252427;
-    border-top: 1px solid #fff1c1;
-    border-bottom: 1px solid #fff1c1;
+    /* border-top: 1px solid #fff1c1;
+    border-bottom: 1px solid #fff1c1; */
+}
+
+#toc-wrapper::before
+{
+    position: relative;
+    z-index: 3;
+
+    content: "";
+    display: block;
+    
+    top: 0px;
+    width: 100%;
+    height: 20px;
+
+    background: linear-gradient(135deg, #ef6e3e 15px, transparent 0),
+                linear-gradient(-135deg, #ef6e3e 15px, transparent 0);
+    background-position: bottom left;
+    background-repeat: repeat-x;
+    background-size: 25px 25px;
+}
+
+#toc-wrapper::after
+{
+    position: relative;
+
+    content: "";
+    display: block;
+    
+    top: 20px;
+    width: 100%;
+    height: 20px;
+
+    background: linear-gradient(135deg, #252427 15px, transparent 0),
+                linear-gradient(-135deg, #252427 15px, transparent 0);
+    background-position: bottom left;
+    background-repeat: repeat-x;
+    background-size: 25px 25px;
 }
 
 #article-wrapper #toc-wrapper aside
@@ -174,6 +269,24 @@ div#article-wrapper
     background-color: #ef6e3e;
 }
 
+#article-wrapper #header-wrapper::after
+{
+    position: absolute;
+
+    content: "";
+    display: block;
+    
+    top: calc(30vh + 64px);
+    width: 100%;
+    height: 20px;
+
+    background: linear-gradient(135deg, #ef6e3e 15px, transparent 0),
+                linear-gradient(-135deg, #ef6e3e 15px, transparent 0);
+    background-position: bottom left;
+    background-repeat: repeat-x;
+    background-size: 25px 25px;
+}
+
 #header-wrapper #header-content-wrapper
 {
     display: block;
@@ -212,7 +325,7 @@ div#article-wrapper
 {
     #header-wrapper #header-content-wrapper header
     {
-       font-size: 4em;
+       font-size: 3.5em;
     }
 }
 
@@ -228,6 +341,16 @@ div#article-wrapper
     {
         margin: 0 0 0 0;
         width: 100%;
+    }
+
+    div#aside-wrapper
+    {
+        display: none;
+    }
+
+    #article-wrapper #toc-wrapper
+    {
+        display: block;
     }
 
     div#aside-wrapper
